fix collapse indicator, uncollapse on TOC navigation

--- a/collapsible-sections.css
+++ b/collapsible-sections.css
@@ -3,15 +3,10 @@
   user-select: none;
 }
 
-.collapsible-heading::after {
-  content: " ▾";
+.collapse-indicator {
   font-size: 0.6em;
   opacity: 0.4;
   vertical-align: middle;
-}
-
-.collapsible-heading.collapsed::after {
-  content: " ▸";
 }
 
 .collapsible-body.collapsed {
